--- a/src/global.scss
+++ b/src/global.scss
@@ -16,6 +16,10 @@
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
 
+body {
+  background-color: transparent;
+}
+
 /* Basic CSS for apps built with Ionic */
 // @import "~@ionic/angular/css/normalize.css";
 // @import "~@ionic/angular/css/structure.css";
